update timetable scheduling logic for pdf